--- a/spark-app/build.gradle
+++ b/spark-app/build.gradle
@@ -4,6 +4,7 @@
 
 plugins {
     id 'com.ilab.recon.java-application-conventions'
+    id 'scala'
 }
 
 dependencies {
@@ -16,8 +17,15 @@ dependencies {
     implementation 'io.delta:delta-core_2.13:2.3.0'
     implementation 'org.apache.spark:spark-streaming-kafka-0-10_2.13:3.3.2'
     implementation 'org.apache.spark:spark-sql-kafka-0-10_2.13:3.3.2'
+    implementation 'org.postgresql:postgresql:42.7.1'
 
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+
+    implementation 'org.scala-lang:scala-library:2.13.11'
+    testImplementation 'org.scalatest:scalatest_2.13:3.2.16'
+    testImplementation 'org.scalatestplus:junit-4-13_2.13:3.2.2.0'
+    testRuntimeOnly 'org.scala-lang.modules:scala-xml_2.13:1.2.0'
+
 }
 
 application {
