--- a/spark-app/build.gradle
+++ b/spark-app/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation 'org.apache.spark:spark-streaming-kafka-0-10_2.13:3.3.2'
     implementation 'org.apache.spark:spark-sql-kafka-0-10_2.13:3.3.2'
     implementation 'org.postgresql:postgresql:42.7.1'
-
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
 
     implementation 'org.scala-lang:scala-library:2.13.11'
